Added GrayScaleTransformation for Glide

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ def fasterxmlJacksonCoreVersion = '2.7.0'
 def butterKnifeVersion = '8.3.0'
 def hanksxyzHtextViewVersion = '0.1.5'
 def smarttablayoutLibraryVersion = '1.6.1@aar'
+def alormaTimeLineViewVersion = '2.3.0'
+def nineoldandroidsVersion = '2.4.0'
+def daimajiaEasingVersion = '1.0.1@aar'
+def daimajiaaAndroidAnimationsVersion = '1.1.3@aar'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -48,6 +52,10 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-annotations:$fasterxmlJacksonCoreVersion"
     compile "hanks.xyz:htextview-library:$hanksxyzHtextViewVersion"
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
+    compile "com.github.alorma:timelineview:$alormaTimeLineViewVersion"
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
+    compile "com.nineoldandroids:library:$nineoldandroidsVersion"
+    compile "com.daimajia.easing:library:$daimajiaEasingVersion"
+    compile "com.daimajia.androidanimations:library:$daimajiaaAndroidAnimationsVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 }
