--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,27 +38,37 @@ def nineoldandroidsVersion = '2.4.0'
 def daimajiaEasingVersion = '1.0.1@aar'
 def daimajiaaAndroidAnimationsVersion = '1.1.3@aar'
 def mosbyVersion = '2.0.1'
+def eventBusVersion = '3.0.0'
+def glideOkhttpSupport = '1.4.0@aar'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    //    Android Framework
     compile "com.android.support:appcompat-v7:$androidSupportAppcompatVersion"
     compile "com.android.support:design:$androidSupportDesignVersion"
     compile "com.android.support:support-v4:$androidSupportVersion"
+    //    Images/Animations
+    compile "com.nineoldandroids:library:$nineoldandroidsVersion"
+    compile "com.daimajia.easing:library:$daimajiaEasingVersion"
+    compile "com.daimajia.androidanimations:library:$daimajiaaAndroidAnimationsVersion"
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
+    compile "hanks.xyz:htextview-library:$hanksxyzHtextViewVersion"
+    compile "com.github.bumptech.glide:okhttp3-integration:$glideOkhttpSupport"
+    //    REST/HTTP/JSON
     compile "com.squareup.retrofit2:retrofit:$squareupRetrofitVersion"
     compile "com.squareup.okhttp3:okhttp:$squareupOkHttp"
     compile "com.fasterxml.jackson.core:jackson-databind:$fasterxmlJacksonCoreVersion"
     compile "com.fasterxml.jackson.core:jackson-core:$fasterxmlJacksonCoreVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$fasterxmlJacksonCoreVersion"
-    compile "hanks.xyz:htextview-library:$hanksxyzHtextViewVersion"
+    //    Util
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
     compile "com.github.alorma:timelineview:$alormaTimeLineViewVersion"
-    compile "com.nineoldandroids:library:$nineoldandroidsVersion"
-    compile "com.daimajia.easing:library:$daimajiaEasingVersion"
-    compile "com.daimajia.androidanimations:library:$daimajiaaAndroidAnimationsVersion"
+    compile "org.greenrobot:eventbus:$eventBusVersion"
+    //    MVP
     compile "com.hannesdorfmann.mosby:mvp:$mosbyVersion"
     compile "com.hannesdorfmann.mosby:viewstate:$mosbyVersion"
+    //    Dependency injection
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 }
