--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.hypeapp.episoder">
+    package="pl.hypeapp.episodie">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -9,21 +9,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="pl.hypeapp.episoder.ui.activity.SplashScreenActivity">
+        <activity android:name="pl.hypeapp.episodie.ui.activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="pl.hypeapp.episoder.ui.activity.MainWallActivity">
+        <activity android:name="pl.hypeapp.episodie.ui.activity.MainWallActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="pl.hypeapp.episoder.ui.activity.LoginActivity">
+        <activity android:name="pl.hypeapp.episodie.ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
