--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.3.0'
+        classpath 'com.google.gms:google-services:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +19,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven {url "https://clojars.org/repo/"}
     }
 }
 
