--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -15,8 +16,6 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        debug {
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -38,13 +37,12 @@ def alormaTimeLineViewVersion = '2.3.0'
 def nineoldandroidsVersion = '2.4.0'
 def daimajiaEasingVersion = '1.0.1@aar'
 def daimajiaaAndroidAnimationsVersion = '1.1.3@aar'
-def mosbyVersion = '2.0.1'
 def eventBusVersion = '3.0.0'
 def glideOkhttpSupport = '1.4.0@aar'
-def firebaseVersion = '2.5.2+'
-def firebaseAuthVersion = "9.4.0"
+def firebaseClientVersion = '2.5.2+'
+def firebaseVersion = "9.4.0"
 def rxAndroidVersion = "1.2.1"
-def daggerVersion = '1.2.2'
+def daggerVersion = '2.6'
 def icepickVersion = '3.2.0'
 
 dependencies {
@@ -74,16 +72,17 @@ dependencies {
     compile "frankiesardo:icepick:$icepickVersion"
     provided "frankiesardo:icepick-processor:$icepickVersion"
     //    MVP
-    compile "com.hannesdorfmann.mosby:mvp:$mosbyVersion"
-    compile "com.hannesdorfmann.mosby:viewstate:$mosbyVersion"
+    compile 'com.tinmegali.mvp:mvp:0.0.7'
     //    Dependency injection
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     compile "io.reactivex:rxandroid:$rxAndroidVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
-    compile "com.squareup.dagger:dagger:$daggerVersion"
-    provided "com.squareup.dagger:dagger-compiler:$daggerVersion"
+    compile "com.google.dagger:dagger:$daggerVersion"
+    apt "com.google.dagger:dagger-compiler:$daggerVersion"
+    compile "io.reactivex:rxjava:1.1.9"
+    compile 'io.reactivex:rxandroid:1.2.1'
     //    Firebase
-    compile "com.firebase:firebase-client-android:$firebaseVersion"
-    compile "com.google.firebase:firebase-auth:$firebaseAuthVersion"
-
+    compile "com.firebase:firebase-client-android:$firebaseClientVersion"
+    compile "com.google.firebase:firebase-core:$firebaseVersion"
+    compile "com.google.firebase:firebase-auth:$firebaseVersion"
 }
