--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
+    - platform-tools
+    - tools
 
     # The BuildTools version used by your project
-    - build-tools-24.0.1
+    - build-tools-22.0.1
 
     # The SDK version used to compile your project
-    - android-24
+    - android-22
+    - extra
 
     # Additional components
     - extra-google-google_play_services
@@ -18,7 +19,8 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-19
 
+
+
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
-    - sys-img-x86-android-17
