--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,25 @@
 language: android
-before_install:
- - chmod +x gradlew
+jdk:
+    - oraclejdk8
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - platform-tools
     - tools
-
-    # The BuildTools version used by your project
-    - build-tools-24.0.1
-
-    # The SDK version used to compile your project
+    - build-tools-24.0.0
     - android-24
-    - extra
-
-    # Additional components
+    - platform-tools
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-19
-
-
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
+    - extra-android-support
+    - addon-google_apis-google-24
     - sys-img-armeabi-v7a-android-22
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+script:
+- ./build.sh
+
+
+
+
