--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,19 @@ jdk:
 android:
   components:
     - tools
-    - build-tools-24.0.0
-    - android-24
+    - build-tools-22.0.1
+    - android-22
     - platform-tools
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-android-support
-    - addon-google_apis-google-24
+    - addon-google_apis-google-22
     - sys-img-armeabi-v7a-android-22
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 script:
-- ./build.sh
+ - ./gradlew build connectedCheck
 
