--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ jdk:
 android:
   components:
     - tools
-    - build-tools-22.0.1
-    - android-22
+    - tool
+    - build-tools-23.0.0
+    - android-23
     - platform-tools
-
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-android-support
