--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ android:
 #    - extra-android-m2repository
 #    - extra-android-support
 
-#    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-22
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
