--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ android:
 #    - extra-google-m2repository
 #    - extra-android-m2repository
 #    - extra-android-support
+    - sys-img-armeabi-v7a-android-24
+#    - sys-img-armeabi-v7a-android-19
 
-    - sys-img-armeabi-v7a-android-19
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
