--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,19 @@ android:
 #    - extra-google-m2repository
 #    - extra-android-m2repository
 #    - extra-android-support
-    - sys-img-armeabi-v7a-android-24
+    - sys-img-armeabi-v7a-android-21
 #    - sys-img-armeabi-v7a-android-19
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+  before_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
+    - chmod u+x android-wait-for-emulator
+    - ./android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 
