--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: android
 before_install:
 - chmod +x gradlew
+env:
+  global:
+   - ANDROID_API_LEVEL=23
+   - EMULATOR_API_LEVEL=21
+   - ANDROID_BUILD_TOOLS_VERSION=23.0.0
+   - ANDROID_ABI=google_apis/armeabi-v7a
+   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 jdk:
     - oraclejdk8
 android:
@@ -8,14 +15,28 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-24.0.1
-    - android-24
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
     - extra
     - add-on
+    - extra-google-m2repository
+    - extra-android-m2repository
+
+    # Google Play Services
+    - extra-google-google_play_services
+    # Support library
+    - extra-android-support
+
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$EMULATOR_API_LEVEL
+
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 #    - extra-google-m2repository
 #    - extra-android-m2repository
 #    - extra-android-support
-    - sys-img-armeabi-v7a-android-21
+#    - sys-img-armeabi-v7a-android-21
 #    - sys-img-armeabi-v7a-android-19
 
   licenses:
@@ -23,11 +44,8 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
   before_script:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
-    - chmod u+x android-wait-for-emulator
-    - ./android-wait-for-emulator
-    - adb shell input keyevent 82 &
+     - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$EMULATOR_API_LEVEL --abi $ANDROID_ABI
+     - emulator -avd test -no-skin -no-audio -no-window &
+     - android-wait-for-emulator
 
 
