--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
    - EMULATOR_API_LEVEL=21
    - ANDROID_BUILD_TOOLS_VERSION=24.0.1
    - ANDROID_ABI=google_apis/armeabi-v7a
-   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+   - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default)
 android:
   components:
     - tools
@@ -43,9 +43,11 @@ android:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
-  before_script:
-     - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$EMULATOR_API_LEVEL --abi $ANDROID_ABI
-     - emulator -avd test -no-skin -no-audio -no-window &
-     - android-wait-for-emulator
+
+before_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 
