--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
+        maven { url 'https://maven.google.com' }
         jcenter()
-
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.3.0'
-        classpath 'com.google.gms:google-services:3.0.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        apply from: 'dependencies.gradle'
+        classpath buildPlugins.gradle
+        classpath buildPlugins.kotlin
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
         mavenCentral()
-        maven {url "https://clojars.org/repo/"}
     }
 }
 
