--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,10 @@ rootProject.domainModulePlugins.each {
     apply plugin: it
 }
 
+sourceSets.forEach(){
+    it.java.srcDirs = ["src/main/kotlin"]
+}
+
 dependencies {
     rootProject.domainModuleDependencies.each {
         add(it.configuration, it.dependency, it.options)
