Add: Introduced DebugBottle.

--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -3,12 +3,19 @@
           package="pl.hypeapp.episodie">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name="com.exyui.android.debugbottle.components.DTDrawerActivity"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:label="Episodie Debug Tool"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
