--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,12 @@ buildscript {
         apply from: 'dependencies.gradle'
         classpath buildPlugins.gradle
         classpath buildPlugins.kotlin
+        classpath 'org.codehaus.groovy:groovy-android-gradle-plugin:1.1.0'
     }
+}
+
+plugins {
+    id "net.ltgt.apt" version "0.10"
 }
 
 allprojects {
