--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         apply from: 'dependencies.gradle'
         classpath buildPlugins.gradle
         classpath buildPlugins.kotlin
-        classpath 'org.codehaus.groovy:groovy-android-gradle-plugin:1.1.0'
+        classpath buildPlugins.groovy
     }
 }
 
