--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,22 +36,37 @@ ext {
     def nodepVersion = '3.2.5'
     def groovyVersion = '2.4.10'
     def stethoVersion = '1.5.0'
+    def extensiblePageIndicatorVersion = '1.0.1'
+    def butterKnifeVersion = '8.6.0'
+    def glideVersion = '4.0.0-RC0'
+    def rippleVersion = '1.3'
 
     def libs = [
-            appCompat             : [group: 'com.android.support', name: 'appcompat-v7', version: androidSupportLibs],
-            kotlin_stdlib         : [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: build.kotlin],
-            rxJava                : [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxJavaVersion],
-            rxAndroid             : [group: 'io.reactivex.rxjava2', name: 'rxandroid', version: rxAndroidVersion],
-            okHttp                : [group: 'com.squareup.okhttp3', name: 'okhttp', version: okHttpVersion],
-            debugBottleRuntime    : [group: 'com.exyui.android', name: 'debug-bottle-runtime', version: debugBottleVersion],
-            debugBottleNoop       : [group: 'com.exyui.android', name: 'debug-bottle-noop-kotlin', version: debugBottleVersion],
-            gson                  : [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
-            retrofit              : [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
-            retrofitRxJavaAdapater: [group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: retrofitVersion],
-            retrofitGsonConverter : [group: 'com.squareup.retrofit2', name: 'converter-gson', version: retrofitVersion],
-            dagger                : [group: 'com.google.dagger', name: 'dagger', version: daggerVersion],
-            daggerCompiler        : [group: 'com.google.dagger', name: 'dagger-compiler', version: daggerVersion],
-            stetho                : [group: 'com.facebook.stetho', name: 'stetho', version: stethoVersion]
+            supportAppCompat       : [group: 'com.android.support', name: 'appcompat-v7', version: androidSupportLibs],
+            supportCardView        : [group: 'com.android.support', name: 'cardview-v7', version: androidSupportLibs],
+            supportDesign          : [group: 'com.android.support', name: 'design', version: androidSupportLibs],
+            supportPalette         : [group: 'com.android.support', name: 'palette-v7', version: androidSupportLibs],
+            supportRecyclerView    : [group: 'com.android.support', name: 'recyclerview-v7', version: androidSupportLibs],
+            supportV4              : [group: 'com.android.support', name: 'support-v4', version: androidSupportLibs],
+            kotlin_stdlib          : [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: build.kotlin],
+            rxJava                 : [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxJavaVersion],
+            rxAndroid              : [group: 'io.reactivex.rxjava2', name: 'rxandroid', version: rxAndroidVersion],
+            okHttp                 : [group: 'com.squareup.okhttp3', name: 'okhttp', version: okHttpVersion],
+            debugBottleRuntime     : [group: 'com.exyui.android', name: 'debug-bottle-runtime', version: debugBottleVersion],
+            debugBottleNoop        : [group: 'com.exyui.android', name: 'debug-bottle-noop-kotlin', version: debugBottleVersion],
+            gson                   : [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
+            retrofit               : [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
+            retrofitRxJavaAdapater : [group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: retrofitVersion],
+            retrofitGsonConverter  : [group: 'com.squareup.retrofit2', name: 'converter-gson', version: retrofitVersion],
+            dagger                 : [group: 'com.google.dagger', name: 'dagger', version: daggerVersion],
+            daggerCompiler         : [group: 'com.google.dagger', name: 'dagger-compiler', version: daggerVersion],
+            stetho                 : [group: 'com.facebook.stetho', name: 'stetho', version: stethoVersion],
+            extensiblePageIndicator: [group: 'com.merhold.extensiblepageindicator', name: 'extensiblepageindicator', version: extensiblePageIndicatorVersion],
+            butterKnife            : [group: 'com.jakewharton', name: 'butterknife', version: butterKnifeVersion],
+            butterKnifeCompiler    : [group: 'com.jakewharton', name: 'butterknife-compiler', version: butterKnifeVersion],
+            glide                  : [group: 'com.github.bumptech.glide', name: 'glide', version: glideVersion],
+            glideCompiler          : [group: 'com.github.bumptech.glide', name: 'compiler', version: glideVersion],
+            ripple                 : [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleVersion]
     ]
 
     def testLibs = [
@@ -74,23 +89,40 @@ ext {
     }
 
     applicationModuleDependencies = [
-            [configuration: "implementation", dependency: libs.appCompat],
+            // support libs
+            [configuration: "implementation", dependency: libs.supportAppCompat],
+            [configuration: "implementation", dependency: libs.supportCardView],
+            [configuration: "implementation", dependency: libs.supportDesign],
+            [configuration: "implementation", dependency: libs.supportPalette],
+            [configuration: "implementation", dependency: libs.supportRecyclerView],
+            [configuration: "implementation", dependency: libs.supportV4],
             [configuration: "implementation", dependency: libs.kotlin_stdlib],
+            // frontend
+            [configuration: "implementation", dependency: libs.ripple],
+            [configuration: "implementation", dependency: libs.glide],
+            [configuration: "implementation", dependency: libs.ripple],
+            [configuration: "annotationProcessor", dependency: libs.glideCompiler],
+            // networking
             [configuration: "implementation", dependency: libs.okHttp],
-            [configuration: "debugImplementation", dependency: libs.debugBottleRuntime],
-            [configuration: "testImplementation", dependency: libs.debugBottleNoop],
-            [configuration: "implementation", dependency: libs.rxJava],
-            [configuration: "implementation", dependency: libs.rxAndroid],
+            // dependency injection
+            [configuration: "implementation", dependency: libs.butterKnife],
+            [configuration: "annotationProcessor", dependency: libs.butterKnifeCompiler],
             [configuration: "implementation", dependency: libs.dagger],
             [configuration: "annotationProcessor", dependency: libs.daggerCompiler],
+            // debug tools
+            [configuration: "debugImplementation", dependency: libs.debugBottleRuntime],
+            [configuration: "testImplementation", dependency: libs.debugBottleNoop],
             [configuration: "implementation", dependency: libs.stetho],
-            //test
+            // rx
+            [configuration: "implementation", dependency: libs.rxJava],
+            [configuration: "implementation", dependency: libs.rxAndroid],
+            // test
             [configuration: "testImplementation", dependency: testLibs.junit],
             [configuration: "testImplementation", dependency: testLibs.spock],
             [configuration: "testImplementation", dependency: testLibs.groovy],
             [configuration: "androidTestImplementation", dependency: testLibs.espressoCore,
              options      : supportAnnotationsExclude],
-            //modules
+            // modules
             [configuration: "implementation", dependency: project(modules.domain)],
             [configuration: "implementation", dependency: project(modules.presentation)]
     ]
@@ -98,40 +130,44 @@ ext {
     presentationModuleDependencies = [
             [configuration: "implementation", dependency: libs.kotlin_stdlib],
             [configuration: "implementation", dependency: libs.dagger],
+            // dependency injection
             [configuration: "kapt", dependency: libs.daggerCompiler],
-            //test
+            // test
             [configuration: "testImplementation", dependency: testLibs.junit],
             [configuration: "testImplementation", dependency: testLibs.spock],
             [configuration: "testImplementation", dependency: testLibs.groovy],
-            //modules
+            // modules
             [configuration: "implementation", dependency: project(modules.domain)]
     ]
 
     domainModuleDependencies = [
             [configuration: "implementation", dependency: libs.kotlin_stdlib],
-            //test
+            // test
             [configuration: "testImplementation", dependency: testLibs.junit],
             [configuration: "testImplementation", dependency: testLibs.spock],
             [configuration: "testImplementation", dependency: testLibs.groovy]
     ]
 
     dataprovidersModuleDependencies = [
-            [configuration: "implementation", dependency: libs.rxJava],
             [configuration: "implementation", dependency: libs.kotlin_stdlib],
-            [configuration: "androidTestImplementation", dependency: testLibs.espressoCore,
-             options      : supportAnnotationsExclude],
+            // networking
             [configuration: "implementation", dependency: libs.okHttp],
-            [configuration: "implementation", dependency: libs.rxAndroid],
             [configuration: "implementation", dependency: libs.retrofit],
             [configuration: "implementation", dependency: libs.retrofitGsonConverter],
             [configuration: "implementation", dependency: libs.retrofitRxJavaAdapater],
+            // dependency injection
             [configuration: "implementation", dependency: libs.dagger],
             [configuration: "annotationProcessor", dependency: libs.daggerCompiler],
-            //test
+            // rx
+            [configuration: "implementation", dependency: libs.rxJava],
+            [configuration: "implementation", dependency: libs.rxAndroid],
+            // test
             [configuration: "testImplementation", dependency: testLibs.junit],
             [configuration: "testImplementation", dependency: testLibs.spock],
             [configuration: "testImplementation", dependency: testLibs.groovy],
-            //modules
+            [configuration: "androidTestImplementation", dependency: testLibs.espressoCore,
+             options      : supportAnnotationsExclude],
+            // modules
             [configuration: "implementation", dependency: project(modules.domain)]
     ]
 
