--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,14 +2,14 @@ ext {
     android = [
             compileSdkVersion: 25,
             buildToolsVersion: "25.0.3",
-            minSdkVersion    : 16,
+            minSdkVersion    : 17,
             targetSdkVersion : 25,
             versionCode      : 1,
             versionName      : "1.0"
     ]
 
     build = [
-            gradle: "3.0.0-alpha2",
+            gradle: "3.0.0-alpha3",
             kotlin: "1.1.2-4",
             groovy: "1.1.0"
     ]
@@ -22,6 +22,7 @@ ext {
 
     // dependency version
     def androidSupportLibs = '25.3.1'
+    def constraintLayoutVersion = '1.0.2'
     def jUnitVersion = '4.12'
     def espressoVersion = '2.2.2'
     def rxJavaVersion = '2.1.0'
@@ -40,6 +41,10 @@ ext {
     def butterKnifeVersion = '8.6.0'
     def glideVersion = '4.0.0-RC0'
     def rippleVersion = '1.3'
+    def calligraphyVersion = '2.3.0'
+    def multiSectionVersion = 'v0.1'
+    def navigationTabBarVersion = '1.2.5'
+    def slidingRootNavVersion = '1.0.2'
 
     def libs = [
             supportAppCompat       : [group: 'com.android.support', name: 'appcompat-v7', version: androidSupportLibs],
@@ -48,6 +53,7 @@ ext {
             supportPalette         : [group: 'com.android.support', name: 'palette-v7', version: androidSupportLibs],
             supportRecyclerView    : [group: 'com.android.support', name: 'recyclerview-v7', version: androidSupportLibs],
             supportV4              : [group: 'com.android.support', name: 'support-v4', version: androidSupportLibs],
+            constrainLayout        : [group: 'com.android.support.constraint', name: 'constraint-layout', version: constraintLayoutVersion],
             kotlin_stdlib          : [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: build.kotlin],
             rxJava                 : [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxJavaVersion],
             rxAndroid              : [group: 'io.reactivex.rxjava2', name: 'rxandroid', version: rxAndroidVersion],
@@ -66,7 +72,11 @@ ext {
             butterKnifeCompiler    : [group: 'com.jakewharton', name: 'butterknife-compiler', version: butterKnifeVersion],
             glide                  : [group: 'com.github.bumptech.glide', name: 'glide', version: glideVersion],
             glideCompiler          : [group: 'com.github.bumptech.glide', name: 'compiler', version: glideVersion],
-            ripple                 : [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleVersion]
+            ripple                 : [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleVersion],
+            calligraphy            : [group: 'uk.co.chrisjenx', name: 'calligraphy', version: calligraphyVersion],
+            multiSection           : [group: 'com.github.yalantis', name: 'multi-selection', version: multiSectionVersion],
+            navigationTabBar       : [group: 'devlight.io', name: 'navigationtabbar', version: navigationTabBarVersion],
+            slidingRootNav         : [group: 'com.yarolegovich', name: 'sliding-root-nav', version: slidingRootNavVersion]
     ]
 
     def testLibs = [
@@ -99,8 +109,13 @@ ext {
             [configuration: "implementation", dependency: libs.kotlin_stdlib],
             // frontend
             [configuration: "implementation", dependency: libs.ripple],
+            [configuration: "implementation", dependency: libs.constrainLayout],
             [configuration: "implementation", dependency: libs.glide],
             [configuration: "implementation", dependency: libs.ripple],
+            [configuration: "implementation", dependency: libs.calligraphy],
+            [configuration: "implementation", dependency: libs.multiSection],
+            [configuration: "implementation", dependency: libs.navigationTabBar],
+            [configuration: "implementation", dependency: libs.slidingRootNav],
             [configuration: "annotationProcessor", dependency: libs.glideCompiler],
             // networking
             [configuration: "implementation", dependency: libs.okHttp],
