Add: source and target compatibility.

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -2,6 +2,9 @@ rootProject.presentationModulePlugins.each {
     apply plugin: it
 }
 
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+
 sourceSets {
     main {
         java.srcDirs += 'src/main/kotlin'
