--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,9 @@ rootProject.domainModulePlugins.each {
     apply plugin: it
 }
 
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+
 sourceSets {
     main {
         java.srcDirs += 'src/main/kotlin'
